# servicers

./: Cargo.toml  build.rs  out.txt  servicers.json
src/: child_proc.rs  child_service.rs  control.rs  logger.rs  main.rs  monitor_service.rs  proc_config.rs  tests.rs
test/: ServiceConfig.php  ServiceRs.php  app1.php  app1.txt  app2.php  index.php  main1.rs
