[package]
name = "servicers"
version = "0.1.0"
edition = "2021"

[dependencies]
windows-service = "0.5.0"

[dependencies.windows]
version = "0.42.0"
features = [
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_Graphics_Gdi",
    "Win32_Storage",
    "Win32_Storage_FileSystem"
]