[package]
edition = "2021"

name = "servicers"
description = "Appro service"
version = "0.1.0"
license = "Copyright © 2022"

build = "build.rs"

[dependencies]
windows-service = "0.5.0"
chrono = "0.4.22"
lazy_static = "1.4.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"

[dependencies.windows]
version = "0.43.0"
features = [
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_Graphics_Gdi",
    "Win32_Storage",
    "Win32_Storage_FileSystem"
]

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"